--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,12 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: red;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+
 
